// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android BpkIcon should apply user props 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "rgb(82, 76, 97)",
        "fontFamily": "BpkIcon",
        "fontSize": 24,
        "includeFontPadding": false,
      },
      Object {
        "color": "blue",
      },
    ]
  }
>
  
</Text>
`;

exports[`Android BpkIcon should render correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "rgb(82, 76, 97)",
        "fontFamily": "BpkIcon",
        "fontSize": 24,
        "includeFontPadding": false,
      },
    ]
  }
>
  
</Text>
`;

exports[`Android BpkIcon should render small icon correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "rgb(82, 76, 97)",
        "fontFamily": "BpkIcon",
        "fontSize": 24,
        "includeFontPadding": false,
      },
      Object {
        "fontSize": 16,
      },
    ]
  }
>
  
</Text>
`;
